--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "css-loader": "0.14.5",
         "extract-text-webpack-plugin": "^3.0.2",
         "file-loader": "^1.1.11",
+        "glightbox": "^1.0.8",
         "group-css-media-queries-loader": "^2.0.2",
         "gsap": "^1.20.4",
         "happypack": "^4.0.1",
