--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "image-webpack-loader": "3.2.0",
         "inview": "^0.0.11",
         "jquery": "^3.3.1",
+        "js-cookie": "^2.2.0",
         "loader-utils": "^1.1.0",
         "merge": "^1.2.0",
         "node-sass": "^4.7.2",
